# gateway/src/clob/clob.requests.ts
@@ -19,6 +19,76 @@ import {
   SerumPostSettleFundsResponse,
 } from '../connectors/serum/serum.requests';
 
+import { NetworkSelectionRequest } from '../services/common-interfaces';
+import { OrderType, Side } from '../amm/amm.requests';
+import { Orderbook, SpotMarket } from '@injectivelabs/sdk-ts';
+
+export interface ClobMarketsRequest extends NetworkSelectionRequest {
+  market?: string;
+}
+
+export interface CLOBMarkets {
+  [key: string]: SpotMarket;
+}
+export interface ClobMarketResponse {
+  network: string;
+  timestamp: number;
+  latency: number;
+  markets: CLOBMarkets;
+}
+
+export type ClobTickerRequest = ClobMarketsRequest;
+
+export type ClobTickerResponse = ClobMarketResponse;
+
+export interface ClobOrderbookRequest extends ClobMarketsRequest {
+  market: string;
+}
+
+export interface ClobOrderbookResponse {
+  network: string;
+  timestamp: number;
+  latency: number;
+  orderbook: Orderbook;
+}
+
+export interface ClobGetOrderRequest extends ClobOrderbookRequest {
+  address: string;
+  orderId: string;
+}
+
+export interface ClobGetOrderResponse {
+  network: string;
+  timestamp: number;
+  latency: number;
+  orders:
+    | [
+        {
+          [key: string]: string;
+        }
+      ]
+    | [];
+}
+
+export interface ClobPostOrderRequest extends ClobOrderbookRequest {
+  address: string;
+  side: Side;
+  orderType: OrderType;
+  price: string;
+  amount: string;
+}
+
+export interface ClobPostOrderResponse {
+  network: string;
+  timestamp: number;
+  latency: number;
+  txHash: string;
+}
+
+export type ClobDeleteOrderRequest = ClobGetOrderRequest;
+
+export type ClobDeleteOrderResponse = ClobPostOrderResponse;
+
 export type ClobDeleteOrdersRequest = SerumCancelOrdersRequest;
 export type ClobDeleteOrdersResponse = SerumCancelOrdersResponse;
 export type ClobGetFilledOrdersRequest = SerumGetFilledOrdersRequest;
