# gateway/src/network/network.controllers.ts
@@ -10,6 +10,7 @@ import { BinanceSmartChain } from '../chains/binance-smart-chain/binance-smart-c
 import { Ethereum } from '../chains/ethereum/ethereum';
 import { Harmony } from '../chains/harmony/harmony';
 import { Polygon } from '../chains/polygon/polygon';
+import { Injective } from '../chains/injective/injective';
 import { TokenInfo } from '../services/ethereum-base';
 import {
   HttpException,
@@ -49,6 +50,8 @@ export async function getStatus(
       connections.push(Near.getInstance(req.network as string));
     } else if (req.chain === 'cronos') {
       connections.push(await Cronos.getInstance(req.network as string));
+    } else if (req.chain === 'injective') {
+      connections.push(Injective.getInstance(req.network as string));
     } else {
       throw new HttpException(
         500,
@@ -96,6 +99,11 @@ export async function getStatus(
     connections = connections.concat(
       bscConnections ? Object.values(bscConnections) : []
     );
+
+    const injectiveConnections = Injective.getConnectedInstances();
+    connections = connections.concat(
+      injectiveConnections ? Object.values(injectiveConnections) : []
+    );
   }
 
   for (const connection of connections) {
@@ -125,7 +133,7 @@ export async function getStatus(
 }
 
 export async function getTokens(req: TokensRequest): Promise<TokensResponse> {
-  let connection: EthereumBase | Solanaish | Nearish;
+  let connection: EthereumBase | Solanaish | Nearish | Injective;
   let tokens: TokenInfo[] = [];
 
   if (req.chain && req.network) {
@@ -145,6 +153,8 @@ export async function getTokens(req: TokensRequest): Promise<TokensResponse> {
       connection = Near.getInstance(req.network);
     } else if (req.chain === 'cronos') {
       connection = await Cronos.getInstance(req.network);
+    } else if (req.chain === 'injective') {
+      connection = Injective.getInstance(req.network);
     } else {
       throw new HttpException(
         500,
